# brev-control-plane

./: .gitignore  README.md  pyproject.toml
docs/plans/: 2026-06-11-live-control-hardening-plan.md
src/brev_control_plane/: __init__.py  bootstrap.py  brev.py  bundles.py  checks.py  cli.py  jobs.py  planner.py  queue_protocol.py  queue_server.py  queue_store.py  state.py  worker.py
tests/: test_bootstrap.py  test_brev_client.py  test_bundles.py  test_checks.py  test_cli.py  test_jobs.py  test_planner.py  test_queue_protocol.py  test_queue_server.py  test_queue_store.py  test_state.py  test_worker.py
